--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,6 +5,24 @@
   --black: #141414;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #000;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #555;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--blue);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -130,7 +148,7 @@ header nav a:hover {
 }
 
 #play-button {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .primary-piece .container-img {
@@ -150,7 +168,7 @@ header nav a:hover {
 }
 
 .content .row {
-    margin-top: 1.7rem;
+  margin-top: 1.7rem;
 }
 
 .content .section-title h3 {
@@ -177,16 +195,29 @@ header nav a:hover {
 
 /* Modal */
 
+#modal-bg {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
 #modal-game {
   display: none;
-  width: 100%;
-  height: 100vh;
+  width: 95%;
+  height: 95vh;
+  margin-top: 2.5vh;
+  margin-left: 2.5%;
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 2; /* Sit on top */
   left: 0;
   top: 0;
   background-color: var(--black);
-  border-radius: 1rem;
+  border-radius: 5px;
   border: #444 solid 1px;
 }
 
@@ -195,6 +226,14 @@ header nav a:hover {
   height: 100%;
   margin-top: 5%;
   display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#modal-game .game-info {
+  display: flex;
+  width: 100%;
   justify-content: space-evenly;
   margin: 0 5rem;
 }
@@ -233,6 +272,14 @@ header nav a:hover {
   color: gold;
 }
 
+.rating-grade {
+    color: #ddd;
+}
+
+.rating-reviewers {
+    margin-top: .25rem;
+}
+
 #modal-game .btn-control {
   margin-top: 2rem;
 }
@@ -267,7 +314,7 @@ header nav a:hover {
 }
 
 #modal-play-button {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 #modal-game .container-img {
@@ -280,6 +327,32 @@ header nav a:hover {
   width: 20rem;
   object-fit: cover;
 }
+
+#modal-game h3 {
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
+}
+
+#demo-container {
+  width: 100%;
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+#demo-video {
+  width: 25rem;
+  height: 14rem;
+}
+
+#reviews-container {
+  margin-top: 3rem;
+  text-align: center;
+}
+
 
 /* Footer */
 
