--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -46,6 +46,10 @@
         margin-bottom: .5rem;
     }
 
+    #search-btn {
+        margin-right: 0;
+    }
+
     .primary-piece .wrapper {
         flex-direction: column-reverse;
     }
