--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -162,6 +162,10 @@ header nav a:hover {
 }
 
 /* Content area */
+.loading-placeholder {
+    width: 10rem;
+    height: 10rem;
+}
 
 .content {
   margin: 0 1rem;
@@ -178,6 +182,10 @@ header nav a:hover {
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 0.5rem;
+}
+
+.all-carosel, .best-carosel, .popular-carosel {
+    text-align: center;
 }
 
 .item {
