minor responsivity fixes

--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -42,6 +42,10 @@
         flex-direction: column;
     }
 
+    header .logo {
+        margin: auto;
+    }
+
     header nav {
         margin-bottom: .5rem;
     }
